sumo/tests/sumo/errors/routes/disconnected/errors.sumo
Error: Route of vehicle '0' is invalid:
Could not find a valid connection between edges 'beg' and 'end'.
Quitting (on error).
